--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -2030,9 +2030,10 @@ button,
         text-indent: 5em;
         width: 5em; }
         #sidebar .toggle:before {
-          font-size: 1.5rem; }
+          font-size: 1.5rem;}
       #sidebar.inactive {
-        margin-left: -24em; } }
+        margin-left: -24em; }                     
+      }
   @media screen and (max-width: 1280px) {
     #sidebar {
       box-shadow: 0 0 5em 0 rgba(0, 0, 0, 0.175);
@@ -2104,6 +2105,7 @@ button,
     color: inherit;
     font-family: "Roboto Slab", serif;
     font-size: 1.125em; }
+
   #header .icons {
     text-align: right; }
   @media screen and (max-width: 1680px) {
@@ -2115,12 +2117,17 @@ button,
       #header .logo {
         font-size: 1.25em;
         margin: 0; }
+        
       #header .icons {
         height: 5em;
         line-height: 5em;
         position: absolute;
         right: -0.5em;
         top: 0; } }
+
+  @media screen and (orientation: portrait) and (max-width: 480px) {
+    #header .logo {
+      max-width: 35vh; }}
 
 /* Banner */
 #banner {
